--- a/css-exercises/flex/02-flex-header/style.css
+++ b/css-exercises/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -14,6 +18,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
 }
 
 a {
@@ -22,4 +27,11 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links > ul,
+.right-links > ul {
+  display: flex;
+  justify-content: space-around;
+  gap: 16px;
 }
