--- a/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-exercises/flex/07-flex-layout-2/style.css
@@ -1,29 +1,69 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  padding: 16px;
+  font-size: 32px;
+  font-weight: 900;
+}
+
+.main {
+  flex: 1;
+  display: flex;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex: 1 0 auto;
+  padding: 16px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 32px;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  padding: 16px;
+  flex-basis: 320px;
+}
+
+ul {
+  padding: 0px 12px;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 8px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 24px;
 }
